# v-JianzhangDong_26_02_23_case2

./: Claude-haiku-4.5.txt  Claude-sonnet-4.5.txt  compare.py  final_prompt.txt  goldeneye-prime.txt  goldeneye-secondary.txt  oswe-prime.txt  oswe-secondary.txt
issue/: main.py  requirements.txt
issue/taskflow/: engine.py  plugins.py  scheduler.py  utils.py
issue_fixed/: auto_test.py  main.py  pyproject.toml  reference_link.txt
issue_fixed/issue/: main.py  pyproject.toml  requirements.txt
issue_fixed/issue/taskflow/: __init__.py  engine.py  plugins.py  scheduler.py  utils.py
issue_fixed/taskflow/: __init__.py  engine.py  plugins.py  scheduler.py  utils.py
issue_fixed/taskflow_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
issue_fixed/tests/: conftest.py  test_engine_contract.py  test_plugin_protocol.py
