[project]
name = "taskflow-engine"
version = "0.1.0"
description = "A lightweight pluggable task workflow engine"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["logs*", "tests*"]